# dataconfy

./: README.md  example.py  justfile  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: publish.yaml  pull-request.yaml
src/dataconfy/: __init__.py  __version__.py  base.py  config.py  env_vars.py
tests/: __init__.py  test_config.py  test_data.py  test_default_methods.py  test_defaults.py  test_env_vars.py  test_serializers.py
