[project]
name = "dataconfy"
version = "0.0.1"
description = "Type-safe configuration and data persistence using Python dataclasses with YAML/JSON serialization, XDG directory conventions, and environment variable support."
authors = [
    {name = "Luca Bello", email = "lusgabello@gmail.com"}
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.5.0",
    "pyyaml>=6.0.3",
    "vulture>=2.14",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "pyright>=1.1.408",
    "codespell>=2.4.1",
    "vulture>=2.14",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "actionlint-py>=1.7.10.24",
    "uv-secure>=0.15.4",
]

[project.urls]
Homepage = "https://github.com/lucabello/dataconfy"
Repository = "https://github.com/lucabello/dataconfy"
Issues = "https://github.com/lucabello/dataconfy/issues"


# Building and publishing
[build-system]
requires = ["uv_build>=0.9.2,<0.11.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

# Tools configuration
[tool.ruff]
line-length = 99

[tool.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = ".git,build,venv*"
ignore-words-list = "assertIn"

[tool.vulture]
min_confidence = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
